2008-12-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9645: Memcached backend is not working properly

2008-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9864: felogin: Drop languages from locallang.xml

2008-11-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9862: missing class for checkbox in t3editor

2008-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9742: [Feature] Zebra columns for fileadmin listing (thanks to Stefano Kowalke)

2008-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9822: New rendering method for content elements (lesser markup, cleaner code) (thanks to Susanne Moog)

2008-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug RFC #9797: Bug: waste of time in LIST module with LOISmode (thanks to Franz Holzinger)

2008-11-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #8944: PHP-Error in class.em_index.php on line 4333 (thanks to Stefan Geith)

2008-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9725: double enquote in t3lib_htmlmail of returnPath

2008-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8561 Checkboxes and labels are aligned badly if in one line

2008-11-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9806: Mountpoints do not work across domain boundaries

2008-11-23  Ingo Renner  <ingo@typo3.org>

	* Added feature #9813: Turn the workspace selector into a drop down toolbar item menu

2008-11-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow up for feature #9775: htmlArea RTE: additional features for link insertion dialogue

2008-11-22  Steffen Kamper  <info@sk-typo3.de>

	* felogin: completed ChangeLog, raised ext-version to 1.1.0

2008-11-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9798: Don't show fe_users password in page module

2008-11-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9802: Frontend plugins show PHP error if there is no TypoScript configuration

2008-11-13  Stanislas Rolland  <typo3@sjbr.ca>
